--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,7 @@ body {
   height: 25px;
    display: block; 
 }
-.button{
-  position: absolute;
-  top:0;
-  z-index: 3;
-/*pointer-events: none; */
-  opacity: 0.5;
-}
+
 .projectWindow img{
   width: 230px;
   height: 230px;
@@ -77,17 +71,12 @@ body {
 .card {
   width: 460px;
   height: 230px;
-/*  background: grey;
-*/  border-radius: 5px;
-/*  background-image: url(http://placekitten.com/400/400);*/
-/*  background-image: url(https://www.elsetge.cat/myimg/f/62-626106_ideas-background-for-business-card-blank-visiting-card.jpg);
-*/  background-size: cover;
+ border-radius: 5px;
+ background-size: cover;
   background-position: center center;
   box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
   transition: box-shadow 0.5s;
   will-change: transform;
-/*  border: 15px solid white;*/
- 
   position: relative;
   }
 
@@ -95,26 +84,19 @@ body {
   box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
 
 }
-/*.toCatchHover {
-opacity:0;
-z-index: 100;
-}
-Comp1{
-  z-index: 10;
-}*/
+
 .mainContainer{
   position: relative;
   display:flex;
   flex-wrap: wrap;
   justify-content: space-around;
-/*  width: 100%;
-  height: 100%;*/
+
 }
 .wrapper{
    margin: 30px;
+   position:relative;
 }
 
-/*.card:hover > svg:hover  { fill: red; }*/
 
 .circle{
   /*fill:yellow;*/
