--- a/src/App.css
+++ b/src/App.css
@@ -266,7 +266,7 @@ button:hover {
 .code-box-shape{
   position: relative;
 z-index: 5;
-   width:20px;
+/*   width:20px;
   height: 20px;
-  background-color: red;
+  background-color: red;*/
 }
